--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,6 +33,9 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        dataBinding true
+    }
+    buildFeatures {
         viewBinding true
     }
 }
@@ -49,4 +54,16 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+
+    //RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+// For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
