--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
 // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
